[package]
name = "python-ls-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
rustpython-ast = {version = "0.4.0", features = ["visitor"]}
rustpython-parser = "0.4.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = {version = "1.50.0", features = ["full"]}
tower-lsp = "0.20.0"
